_sass/main.scss
/* variables */
$linkColor: #0078E3;
$heroBgColor: linear-gradient(197.37deg, rgba(0, 120, 227, 0.07) -0.38%, rgba(165, 72, 181, 0) 101.89%),
linear-gradient(115.93deg, rgba(62, 136, 246, 0.15) 4.86%, rgba(62, 180, 246, 0.0495) 38.05%, rgba(62, 235, 246, 0) 74.14%),
radial-gradient(56.47% 76.87% at 6.92% 7.55%, rgba(62, 136, 246, 0.05) 0%, rgba(62, 158, 246, 0.013) 52.16%, rgba(62, 246, 246, 0) 100%),
linear-gradient(306.53deg, rgba(163, 171, 217, 0.1) 19.83%, rgba(163, 171, 217, 0) 97.33%);
$heroTextColor: #ffffff;

/* mixins */
@mixin transition($transition...) {
    -moz-transition:    $transition;
    -o-transition:      $transition;
    -webkit-transition: $transition;
    transition:         $transition;
}

@mixin border-radius($val) {
    -moz-border-radius: $val;
    -webkit-border-radius: $val;
    border-radius: $val;
}

/* main */
* {
    box-sizing: border-box;
}

html {
    height: 100%;
    font-size: 16px;
}

body {
    font-family: var(--font-family);
    font-weight: 400;
    color: var(--text-color);
    padding: 0;
    margin: 0;
    min-height: 100%;
    background: var(--surface-ground);
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    &.blocked-scroll {
        overflow: hidden;
    }
}

a {
    text-decoration: none;
    color: $linkColor;

    &:hover {
        text-decoration: underline;
    }
}

ul {
    list-style-type: none;

    &.clearlist {
        margin: 0;
        padding: 0;
    }
}

.layout-main {
    margin-left: 250px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100vh;

    .layout-content {
        padding-top: 70px;
        flex: 1 1 0;

        > div:not(.home-page) {
            padding: 28px;
        }
    }
}

@media screen and (max-width: 960px) {
    .layout-main {
        margin-left: 0;

        .layout-content {
            padding-top: 110px;
        }
    }

    .layout-mask {
        &.layout-mask-active {
            z-index: 998;
            width: 100%;
            height: 100%;
            position: fixed;
            top: 70px;
            left: 0;
            background-color: rgba(0,0,0,.4);
            transition: background-color .5s;
        }
    }
}

/* components */
.button {
    color: #ffffff;
    background: #2196F3;
    border: 1px solid #2196F3;
    padding: 0.5rem 1rem;
    font-size: 1rem;
    @include border-radius(3px);
    @include transition(all .2s);
    cursor: pointer;

    &:hover {
        background: #0d89ec;
        color: #ffffff;
        border-color: #0d89ec;
    }
    &:active {
        background: #0b7ad1;
        color: #ffffff;
        border-color: #0b7ad1;
    }
}

.inputfield {
    font-size: 1rem;
    color: var(--text-color);
    background: var(--surface-overlay);
    padding: 0.5rem 0.5rem;
    border: 1px solid var(--surface-border);
    appearance: none;
    border-radius: 3px;

    &:focus {
        outline: 0 none;
        outline-offset: 0;
        box-shadow: 0 0 0 0.2rem #a6d5fa;
        border-color: var(--primary-color);
    }
}

.box {
    background-color: var(--surface-card);
    text-align: center;
    padding: 1rem;
    border-radius: 4px;

    &.box-stretched {
        height: 100%;
    }
}

.elevation {
    .box {
        min-height: 100px;
        min-width: 150px;
        display: flex;
        align-items: center;
        justify-content: center;
        font-weight: 600;
        margin: 2rem;
        border-radius: 4px;
    }
}

.documentation {
    .card {
        background-color: var(--surface-card);
        padding: 1.5rem;
        -webkit-box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
        box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
        border-radius: 4px;
        margin: 2rem 0;

        .card-container {
            background: var(--demo-bg-link);
            border: 1px dashed;
            border-radius: 4px;
            padding: 24px;

            &.blue-container {
                background-color: var(--demo-bg-blue);
                border-color: var(--blue-500);
            }

            &.yellow-container {
                background-color: var(--demo-bg-yellow);
                border-color: var(--yellow-500);
            }

            &.green-container {
                background-color: var(--demo-bg-green);
                border-color: var(--green-500);
            }

            &.purple-container {
                background-color: var(--demo-bg-purple);
                border-color: var(--purple-500);
            }

            &.indigo-container {
                background-color: var(--demo-bg-indigo);
                border-color: var(--indigo-500);
            }

            &.orange-container {
                background-color: var(--demo-bg-orange);
                border-color: var(--orange-500);
            }

            &.cyan-container {
                background-color: var(--demo-bg-cyan);
                border-color: var(--cyan-500);
            }
        }
    }

    ul {
        list-style-type: disc;

        li {
            line-height: 1.5;
        }
    }

    .doc-table {
        border-collapse: collapse;
        width: 100%;
        background-color: var(--surface-overlay);

        thead {
            background-color: var(--surface-overlay);
            position: sticky;
            top: 0;

            th {
                border-bottom: 1px solid var(--surface-border);
                padding: 1rem;
                text-align: left;
            }
        }

        tbody{
            td {
                padding: 1rem;
                border-bottom: 1px solid var(--surface-border);
                font-family: Courier New,monospace;
                font-weight: 700;
                color: var(--text-color-secondary);
                font-size: 14px;

                &:first-child {
                    user-select: all;
                }
            }
        }
    }

    i:not([class~=pi]) {
        background-color: var(--surface-overlay);
        color: var(--primary-color);
        font-family: Monaco,courier,monospace;
        font-style: normal;
        font-size: 12px;
        padding: 2px 4px;
        letter-spacing: .5px;
        border-radius: 3px;
        font-weight: 600;
        margin: 0 2px;
    }
}

/* Prism */
pre[class*="language-"] {
    background-color: transparent !important;

    &:before, &:after {
        display: none !important;
    }

    code {
        border-left: 10px solid var(--surface-border) !important;
        box-shadow: none !important;
        background: var(--surface-overlay) !important;
        color: var(--text-color);
        font-size: 14px;

        .token {
            &.tag,
            &.keyword {
                color: #2196F3 !important;
            }

            &.attr-name,
            &.attr-string {
                color: #2196F3 !important;
            }

            &.attr-value {
                color: #4CAF50 !important;
            }

            &.punctuation {
                color: #2E3440;
            }

            &.operator,
            &.string {
                background: transparent;
            }
        }
    }
}

.color-stack {
    display: flex;
    flex-direction: column;
}

.color-box {
    display: flex;
    align-items: center;
    padding: 1rem;
    width: 250px;
    font-weight: bold;
}

